// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders 1`] = `
<div
  class="betweenBottomMarginDesktop-2 stack"
>
  <div
    class="row containsTooltip"
  >
    <label
      class="resetLabel label"
      for="the-input"
    >
      <div
        class="betweenRightMarginDesktop-2 inline alignCenter"
      >
        <span
          class="medium boldFont color"
        >
          The input
        </span>
      </div>
    </label>
  </div>
  <div
    class="horizontalPaddingDesktop-3 default"
    data-testid="inputWrapper"
  >
    <div
      class="betweenRightMarginDesktop-3 inline sizing"
    >
      <div
        class="fullWidth"
      >
        <input
          aria-invalid="false"
          class="input"
          id="the-input"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Input renders with a feedback state and icon 1`] = `
<div
  class="betweenBottomMarginDesktop-2 stack"
>
  <div
    class="row containsTooltip"
  >
    <label
      class="resetLabel label"
      for="the-input"
    >
      <div
        class="betweenRightMarginDesktop-2 inline alignCenter"
      >
        <span
          class="medium boldFont color"
        >
          The input
        </span>
      </div>
    </label>
  </div>
  <div
    class="horizontalPaddingDesktop-3 error"
    data-testid="inputWrapper"
  >
    <div
      class="betweenRightMarginDesktop-3 inline sizing"
    >
      <div
        class="fullWidth"
      >
        <input
          aria-invalid="true"
          class="input"
          id="the-input"
          type="text"
          value=""
        />
      </div>
      <div
        style="transition:opacity 100ms ease-in-out;opacity:1"
      >
        <i
          aria-label="The value of this input field is invalid."
          class="iconExclamationPointCircle error size16"
        />
      </div>
    </div>
  </div>
</div>
`;
